// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox.Group composition with Checkbox should render correctly 1`] = `
.c1 {
  box-sizing: border-box;
}

.c8 {
  box-sizing: border-box;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: inline-block;
  position: relative;
  margin-bottom: 1px;
  line-height: 1;
}

.c7 {
  display: block;
  position: relative;
  width: 16px;
  height: 16px;
  padding: 0;
  border: 1px solid;
  border-radius: 2px;
  border-color: #bfbfbf;
  background-color: #ffffff;
  color: #373737;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c7::after {
  content: '';
  position: absolute;
  top: 1px;
  left: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 2px 2px 0;
  opacity: 0;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c5 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
}

.c5:checked + .c6 {
  border-color: #3c5ad0;
  background-color: #3c5ad0;
}

.c5:checked + .c6::after {
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  cursor: pointer;
}

.c3 + .c2 {
  margin-left: 0.5rem;
}

.c3:hover .c6 {
  border-color: #3c5ad0;
}

.c3 + .sc-1vrq1pk-3 {
  margin-left: 0.5rem;
}

<div
  class="c0"
  direction="horizontal"
>
  <div
    class="c1"
  >
    <label
      class="sc-1vrq1pk-3 c2 c3"
      direction="horizontal"
    >
      <span
        class="c4"
      >
        <input
          class="c5"
          type="checkbox"
        />
        <span
          class="c6 c7"
        />
      </span>
      <div
        class="c8"
      >
        checkbox 1
      </div>
    </label>
  </div>
  <div
    class="c1"
  >
    <label
      class="sc-1vrq1pk-3 c2 c3"
      direction="horizontal"
    >
      <span
        class="c4"
      >
        <input
          class="c5"
          type="checkbox"
        />
        <span
          class="c6 c7"
        />
      </span>
      <div
        class="c8"
      >
        checkbox 2
      </div>
    </label>
  </div>
  <div
    class="c1"
  >
    <label
      class="sc-1vrq1pk-3 c2 c3"
      direction="horizontal"
    >
      <span
        class="c4"
      >
        <input
          class="c5"
          type="checkbox"
        />
        <span
          class="c6 c7"
        />
      </span>
      <div
        class="c8"
      >
        checkbox 3
      </div>
    </label>
  </div>
</div>
`;

exports[`Checkbox.Group should render vertical checkbox group 1`] = `
.c7 {
  box-sizing: border-box;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c3 {
  display: inline-block;
  position: relative;
  margin-bottom: 1px;
  line-height: 1;
}

.c6 {
  display: block;
  position: relative;
  width: 16px;
  height: 16px;
  padding: 0;
  border: 1px solid;
  border-radius: 2px;
  border-color: #bfbfbf;
  background-color: #ffffff;
  color: #373737;
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c6::after {
  content: '';
  position: absolute;
  top: 1px;
  left: 5px;
  width: 5px;
  height: 10px;
  border: solid white;
  border-width: 0 2px 2px 0;
  opacity: 0;
  -webkit-transform: rotate(45deg) scale(0);
  -ms-transform: rotate(45deg) scale(0);
  transform: rotate(45deg) scale(0);
  -webkit-transition: all 200ms ease 0s;
  transition: all 200ms ease 0s;
}

.c4 {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
}

.c4:checked + .c5 {
  border-color: #3c5ad0;
  background-color: #3c5ad0;
}

.c4:checked + .c5::after {
  opacity: 1;
  -webkit-transform: rotate(45deg) scale(1);
  -ms-transform: rotate(45deg) scale(1);
  transform: rotate(45deg) scale(1);
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1rem;
  cursor: pointer;
}

.c2 + .c1 {
  margin-top: 0.5rem;
}

.c2:hover .c5 {
  border-color: #3c5ad0;
}

.c2 + .sc-1vrq1pk-3 {
  margin-top: 0.5rem;
}

<div
  class="c0"
  direction="vertical"
>
  <label
    class="sc-1vrq1pk-3 c1 c2"
    direction="vertical"
  >
    <span
      class="c3"
    >
      <input
        class="c4"
        type="checkbox"
      />
      <span
        class="c5 c6"
      />
    </span>
    <div
      class="c7"
    >
      checkbox 1
    </div>
  </label>
  <label
    class="sc-1vrq1pk-3 c1 c2"
    direction="vertical"
  >
    <span
      class="c3"
    >
      <input
        class="c4"
        type="checkbox"
      />
      <span
        class="c5 c6"
      />
    </span>
    <div
      class="c7"
    >
      checkbox 2
    </div>
  </label>
  <label
    class="sc-1vrq1pk-3 c1 c2"
    direction="vertical"
  >
    <span
      class="c3"
    >
      <input
        class="c4"
        type="checkbox"
      />
      <span
        class="c5 c6"
      />
    </span>
    <div
      class="c7"
    >
      checkbox 3
    </div>
  </label>
</div>
`;
